<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2019 By Geeks Empire.
  ~
  ~ Created by Elias Fazel on 11/11/19 7:18 PM
  ~ Last modified 11/11/19 7:16 PM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bindShortcutView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/remoteAppIcon"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="3dp"
        android:padding="5dp"
        android:src="@drawable/ic_notification"/>

    <LinearLayout
        android:id="@+id/RemoveRecover"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginBottom="1dp"
        android:layout_toEndOf="@id/remoteAppIcon">

        <TextView
            android:id="@+id/recoverAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="13dp"
            android:text="@string/recover_all"
            android:textColor="@color/light"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/removeAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="13dp"
            android:text="@string/remove_all"
            android:textColor="@color/light"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_below="@id/RemoveRecover"
        android:layout_marginBottom="1dp"
        android:layout_toEndOf="@id/remoteAppIcon">

        <TextView
            android:id="@+id/moveEdge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="13dp"
            android:text="@string/moveEdgeLeft"
            android:textColor="@color/light"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/backEdge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="13dp"
            android:text="@string/backToScreenLeft"
            android:textColor="@color/light"
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>